super merge